--- a/site.css
+++ b/site.css
@@ -19,10 +19,11 @@ body {
     animation-timing-function: linear;
     line-height: 1.5;
     font-size: 100%;
+    min-height: 100vh;
 }
 
 #logo {
-    width: 18rem;
+    width: 11rem;
 }
 
 #heading {
@@ -30,6 +31,7 @@ body {
     text-decoration: none;
     background-color: #000;
     width: 100%;
+    height: 3rem;
 }
 
 a,
@@ -111,24 +113,14 @@ h1 {
     text-decoration: none;
 }
 
-.is-hidden {
-    display: none;
-}
-
 .container,
 .holder {
     margin-left: auto;
     margin-right: auto;
 }
 
-.container {
-    min-height: 100vh;
-    width: 100%;
-}
-
 .holder {
     width: 18rem;
-    min-height: 100vh;
 }
 
 button {
@@ -160,14 +152,28 @@ header {
 main {
     padding: 0.6rem;
     width: 100%;
+    position: relative;
 }
 
 footer {
-    position: absolute;
     padding: 0.6rem;
+    position: absolute;
     bottom: 0;
     background-color: #000;
     color: #fff;
     text-align: center;
+    height: 2.5rem;
     width: 100%;
+}
+
+/* Force footer to the bottom on pages with limited content */
+.fl-page {
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 60px; /* Should be equal to the height of your footer */
+}
+.fl-page-footer-wrap {
+    width: 100%;
+
+    bottom: 0px;
 }
