--- a/site.css
+++ b/site.css
@@ -65,6 +65,10 @@ h1 {
     margin-right: auto;
 }
 
+.holder {
+    width: 35rem;
+}
+
 button {
     background-color: #000;
     border-radius: 1rem;
@@ -72,8 +76,7 @@ button {
     font-size: 150%;
     padding: 1rem;
     height: 4rem;
-    width: 22rem;
-    margin-left: auto;
+    margin-left: 12rem;
     margin-right: auto;
     text-align: center;
     cursor: pointer;
